Updated slides so all of them fit on screen

--- a/Intro_SQL_Presentation2.ipynb
+++ b/Intro_SQL_Presentation2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:25916127c0d1c74abadfe1ccc174af8e195cbb153724a41ff191468b868eb1f4"
+  "signature": "sha256:2a484b78a37bf6effc470eb5ae375b3245bf245c0c24a069225294e8fdb6604e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -215,8 +215,17 @@
      "source": [
       "Recall:\n",
       "__Aggregate Functions:__ Takes in the columns of a table and aggregates over the entries. \n",
-      "- If we use a GROUP BY clause, the aggregation will be over those groups\n",
-      "\n",
+      "- If we use a GROUP BY clause, the aggregation will be over those groups"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
       "| Function | Return value |\n",
       "|----------|--------------|\n",
       "| AVG(column) | Average of non-null values |\n",
@@ -266,7 +275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 47
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -312,7 +321,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 2,
        "text": [
         "          type  num_events\n",
         "0  educational           7\n",
@@ -320,7 +329,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -442,7 +451,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 3,
        "text": [
         "  faculty         major  COUNT(*)\n",
         "0    Math       Act Sci        10\n",
@@ -454,7 +463,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -618,7 +627,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 4,
        "text": [
         "  faculty         major  num_members\n",
         "0     Art          Econ            1\n",
@@ -634,7 +643,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -757,7 +766,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 18,
+       "prompt_number": 5,
        "text": [
         "                            event  attendance\n",
         "0                             BOT          12\n",
@@ -771,7 +780,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -1207,7 +1216,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 6,
        "text": [
         "               Player_1               Player_2\n",
         "0        Darrell Aucoin         Darrell Aucoin\n",
@@ -1276,7 +1285,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -1634,7 +1643,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 7,
        "text": [
         "              Player_1              Player_2\n",
         "0       Darrell Aucoin       Billy L. Hunter\n",
@@ -1703,7 +1712,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -2006,7 +2015,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 8,
        "text": [
         "                     name  events_attended\n",
         "0         John J. Oquendo                1\n",
@@ -2044,7 +2053,7 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -2308,7 +2317,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 9,
        "text": [
         "                     name  events_attended\n",
         "0          Darrell Aucoin                0\n",
@@ -2348,7 +2357,7 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -2572,7 +2581,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 23,
+       "prompt_number": 10,
        "text": [
         "                 name    position  \\\n",
         "0      Darrell Aucoin   President   \n",
@@ -2628,7 +2637,7 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -2724,7 +2733,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 11,
        "text": [
         "                name                     email         phone\n",
         "0  Judith B. Gibbons       judith@uwaterloo.ca  519-555-2343\n",
@@ -2734,7 +2743,7 @@
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -2874,7 +2883,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 12,
        "text": [
         "                name   position\n",
         "0     Darrell Aucoin  President\n",
@@ -2885,7 +2894,7 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -3035,7 +3044,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 13,
        "text": [
         "                name       position faulty      major\n",
         "0     Darrell Aucoin      President   Math      Stats\n",
@@ -3050,7 +3059,7 @@
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 13
     },
     {
      "cell_type": "heading",
@@ -3206,7 +3215,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 14,
        "text": [
         "          event\n",
         "0           BOT\n",
@@ -3217,7 +3226,7 @@
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -3310,7 +3319,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 15,
        "text": [
         "           name location                                        Description\n",
         "0           BOT    C & D  Come and play games with your fellow stats Clu...\n",
@@ -3321,7 +3330,7 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -3414,7 +3423,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 29,
+       "prompt_number": 16,
        "text": [
         "         e.name e.location                                      e.description\n",
         "0           BOT      C & D  Come and play games with your fellow stats Clu...\n",
@@ -3425,7 +3434,7 @@
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -3810,7 +3819,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 30,
+       "prompt_number": 17,
        "text": [
         "                     name                     email         phone\n",
         "0       Ann W. McLaughlin          ann@uwaterloo.ca          None\n",
@@ -3859,7 +3868,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -3974,7 +3983,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 31,
+       "prompt_number": 18,
        "text": [
         "                name  quest_id\n",
         "0     Darrell Aucoin   darrell\n",
@@ -3985,7 +3994,7 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -4226,7 +4235,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 32,
+       "prompt_number": 19,
        "text": [
         "                     name   quest_id\n",
         "0       Ann W. McLaughlin        ann\n",
@@ -4261,7 +4270,7 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 19
     },
     {
      "cell_type": "heading",
@@ -4423,7 +4432,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 33,
+       "prompt_number": 20,
        "text": [
         "                             name         type budget  expenses\n",
         "0                             BOT       social   90.0     58.57\n",
@@ -4438,7 +4447,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 20
     },
     {
      "cell_type": "heading",
@@ -4571,7 +4580,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 34,
+       "prompt_number": 21,
        "text": [
         "  name\n",
         "0  BOT\n",
@@ -4579,7 +4588,7 @@
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -4644,14 +4653,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 35,
+       "prompt_number": 22,
        "text": [
         "   SUM(price)\n",
         "0      219.22"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -4718,14 +4727,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 23,
        "text": [
         "   SUM(exp.price)\n",
         "0          219.22"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 23
     },
     {
      "cell_type": "markdown",
@@ -4813,14 +4822,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 37,
+       "prompt_number": 24,
        "text": [
         "   COUNT(*)\n",
         "0        33"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -4886,14 +4895,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 38,
+       "prompt_number": 25,
        "text": [
         "   COUNT(*) * 7\n",
         "0           231"
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -4915,7 +4924,7 @@
      },
      "source": [
       "```\n",
-      "SELECT Max(soc_budget) \n",
+      "SELECT MAX(soc_budget) \n",
       "FROM (SELECT COUNT(*) * 7 AS soc_budget \n",
       "      FROM member \n",
       "      WHERE faculty = 'Math' \n",
@@ -4929,7 +4938,7 @@
      "collapsed": false,
      "input": [
       "pd.read_sql_query(\n",
-      "\"SELECT Max(soc_budget) \\\n",
+      "\"SELECT MAX(soc_budget) \\\n",
       "FROM (SELECT COUNT(*) * 7 AS soc_budget \\\n",
       "FROM member \\\n",
       "WHERE faculty = 'Math' \\\n",
@@ -4964,14 +4973,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 26,
        "text": [
         "   Max(soc_budget)\n",
         "0              250"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -5064,14 +5073,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 40,
+       "prompt_number": 27,
        "text": [
         "   expense  budget  budget - expense\n",
         "0   219.22     250             30.78"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 27
     },
     {
      "cell_type": "heading",
@@ -5275,7 +5284,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 41,
+       "prompt_number": 28,
        "text": [
         "                             name         type  budget  expenses      warning\n",
         "0                             BOT       social      90     58.57         None\n",
@@ -5290,7 +5299,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 28
     },
     {
      "cell_type": "heading",
@@ -5311,17 +5320,9 @@
       "__Q:__ Suppose we are interested in the healthiness of our food options at Stats Club events. A score of various foods was given below. What is the average 'healthiness' of Stats Club event's food options?\n",
       "- The average of the score values for all of the foods at Stats Club events.\n",
       "\n",
-      "| Food | Score |  \n",
-      "|------|-------|\n",
-      "| donuts | -2 |\n",
-      "| pop | -2 |\n",
-      "| fries | -2 |\n",
-      "| pizza | -1 |\n",
-      "| cookies | -1 |\n",
-      "| coffee | 0 |\n",
-      "| water | 2 |\n",
-      "| meals | 2 |\n",
-      "| veggie platter | 3 |  "
+      "| Food | donuts | pop | fries | pizza | cookies | coffee | water | meals | veggie platter |\n",
+      "|------|--------|-----|-------|-------|---------|--------|-------|-------|----------------|\n",
+      "| Score | -2 | -2 | -2 | -1 | -1 | 0 | 2 | 2 | 3| "
      ]
     },
     {
@@ -5386,14 +5387,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 42,
+       "prompt_number": 29,
        "text": [
         "   avg_score\n",
         "0  -0.807692"
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 29
     },
     {
      "cell_type": "heading",
@@ -5618,7 +5619,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 43,
+       "prompt_number": 30,
        "text": [
         "                     name\n",
         "0       Ann W. McLaughlin\n",
@@ -5658,7 +5659,7 @@
        ]
       }
      ],
-     "prompt_number": 43
+     "prompt_number": 30
     },
     {
      "cell_type": "heading",
@@ -5793,7 +5794,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 44,
+       "prompt_number": 31,
        "text": [
         "                  name\n",
         "0    Ann W. McLaughlin\n",
@@ -5809,7 +5810,7 @@
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 31
     },
     {
      "cell_type": "heading",
@@ -5853,7 +5854,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -5868,7 +5869,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 33
     }
    ],
    "metadata": {}
