Added some material
Added ALL, ANY, SOME operator modifiers section
Added some info to the database about some events
Added a quiz for LIMIT and ORDER BY clauses

--- a/Using_SQL_with_R.Rmd
+++ b/Using_SQL_with_R.Rmd
@@ -21,7 +21,7 @@ __dbDriver__ Driver specifying the operations for creating connections to SQL Se
 For SQLite:
 
 ```r
-m = dbDriver("RSQLite") # equivalent to SQLite()
+m = dbDriver("SQLite") # equivalent to SQLite()
 ```
 
 For MySQL:  
